scripts/nullness/nullgtn/url633772aa30_isma3l_Tp2_tgz-pJ8-ar_fiuba_tecnicas_framework_Pruebas_Casos1_MainJ8.txt
../nullgtn/url633772aa30_isma3l_Tp2_tgz-pJ8-ar_fiuba_tecnicas_framework_Pruebas_Casos1_MainJ8/src/ar/fiuba/tecnicas/framework/JTest/TestCase.java:60: error: [override.param] Incompatible parameter type for testReport.
    public void run(TestReport testReport) {
                               ^
  found   : @Initialized @NonNull TestReport
  required: @Initialized @Nullable TestReport
  Consequence: method in @Initialized @NonNull TestCase
    @NonNull void run(@Initialized @NonNull TestCase this, @Initialized @NonNull TestReport p0)
  cannot override method in @Initialized @NonNull Test
    @NonNull void run(@Initialized @NonNull Test this, @Initialized @Nullable TestReport p0) throws @Initialized @NonNull Throwable
../nullgtn/url633772aa30_isma3l_Tp2_tgz-pJ8-ar_fiuba_tecnicas_framework_Pruebas_Casos1_MainJ8/src/ar/fiuba/tecnicas/framework/JTest/TestCase.java:80: error: [argument] incompatible argument for parameter exception of TestCase.tearingDown.
            tearingDown(exception);
                        ^
  found   : @Initialized @Nullable Throwable
  required: @Initialized @NonNull Throwable
../nullgtn/url633772aa30_isma3l_Tp2_tgz-pJ8-ar_fiuba_tecnicas_framework_Pruebas_Casos1_MainJ8/src/ar/fiuba/tecnicas/framework/JTest/Assert.java:33: error: [dereference.of.nullable] dereference of possibly-null reference expected
        if (!expected.equals(actual))
             ^
../nullgtn/url633772aa30_isma3l_Tp2_tgz-pJ8-ar_fiuba_tecnicas_framework_Pruebas_Casos1_MainJ8/src/ar/fiuba/tecnicas/framework/JTest/Assert.java:38: error: [dereference.of.nullable] dereference of possibly-null reference expected
        if (!expected.equals(actual))
             ^
../nullgtn/url633772aa30_isma3l_Tp2_tgz-pJ8-ar_fiuba_tecnicas_framework_Pruebas_Casos1_MainJ8/src/ar/fiuba/tecnicas/framework/JTest/Assert.java:93: error: [argument] incompatible argument for parameter arg0 of Matcher.matches.
        if (!matcher.matches(actual))
                             ^
  found   : T extends @Initialized @Nullable Object
  required: @Initialized @NonNull Object
../nullgtn/url633772aa30_isma3l_Tp2_tgz-pJ8-ar_fiuba_tecnicas_framework_Pruebas_Casos1_MainJ8/src/ar/fiuba/tecnicas/framework/JTest/Assert.java:98: error: [argument] incompatible argument for parameter arg0 of Matcher.matches.
        if (!matcher.matches(actual))
                             ^
  found   : T extends @Initialized @Nullable Object
  required: @Initialized @NonNull Object
../nullgtn/url633772aa30_isma3l_Tp2_tgz-pJ8-ar_fiuba_tecnicas_framework_Pruebas_Casos1_MainJ8/src/ar/fiuba/tecnicas/framework/JTest/TestReport.java:41: error: [assignment] incompatible types in assignment.
        recognizerTags = null;
                         ^
  found   : null (NullType)
  required: @Initialized @NonNull RecognizerTag
../nullgtn/url633772aa30_isma3l_Tp2_tgz-pJ8-ar_fiuba_tecnicas_framework_Pruebas_Casos1_MainJ8/src/ar/fiuba/tecnicas/framework/JTest/PatternRecognizer.java:15: error: [initialization.fields.uninitialized] the constructor does not initialize fields: matcher
    public PatternRecognizer(String expression) throws PatternSyntaxException {
           ^
../nullgtn/url633772aa30_isma3l_Tp2_tgz-pJ8-ar_fiuba_tecnicas_framework_Pruebas_Casos1_MainJ8/src/ar/fiuba/tecnicas/framework/Pruebas/Casos1/SuiteATest.java:28: error: [argument] incompatible argument for parameter expecteds of Assert.assertArrayEquals.
        Assert.assertArrayEquals("Arrays have different value", (Double[]) suite.getContext().get("list1"), (Double[]) suite.getContext().get("list2"));
                                                                ^
  found   : @Initialized @NonNull Double @Initialized @Nullable []
  required: @Initialized @NonNull Double @Initialized @NonNull []
../nullgtn/url633772aa30_isma3l_Tp2_tgz-pJ8-ar_fiuba_tecnicas_framework_Pruebas_Casos1_MainJ8/src/ar/fiuba/tecnicas/framework/Pruebas/Casos1/SuiteATest.java:28: error: [argument] incompatible argument for parameter actuals of Assert.assertArrayEquals.
        Assert.assertArrayEquals("Arrays have different value", (Double[]) suite.getContext().get("list1"), (Double[]) suite.getContext().get("list2"));
                                                                                                            ^
  found   : @Initialized @NonNull Double @Initialized @Nullable []
  required: @Initialized @NonNull Double @Initialized @NonNull []
../nullgtn/url633772aa30_isma3l_Tp2_tgz-pJ8-ar_fiuba_tecnicas_framework_Pruebas_Casos1_MainJ8/src/ar/fiuba/tecnicas/framework/Pruebas/Casos1/SuiteATest.java:32: error: [unboxing.of.nullable] unboxing a possibly-null reference (Boolean)suite.getContext().get("trueCondition")
        Assert.assertTrue("The condition is false", (Boolean) suite.getContext().get("trueCondition"));
                                                    ^
../nullgtn/url633772aa30_isma3l_Tp2_tgz-pJ8-ar_fiuba_tecnicas_framework_Pruebas_Casos1_MainJ8/src/ar/fiuba/tecnicas/framework/JTest/TestSuite.java:62: error: [initialization.fields.uninitialized] the constructor does not initialize fields: context, suiteFather
    public TestSuite(String testname) {
           ^
../nullgtn/url633772aa30_isma3l_Tp2_tgz-pJ8-ar_fiuba_tecnicas_framework_Pruebas_Casos1_MainJ8/src/ar/fiuba/tecnicas/framework/JTest/TestSuite.java:68: error: [initialization.fields.uninitialized] the constructor does not initialize fields: context, suiteFather
    public TestSuite() {
           ^
../nullgtn/url633772aa30_isma3l_Tp2_tgz-pJ8-ar_fiuba_tecnicas_framework_Pruebas_Casos1_MainJ8/src/ar/fiuba/tecnicas/framework/JTest/TestSuite.java:69: error: [assignment] incompatible types in assignment.
        this.testname = null;
                        ^
  found   : null (NullType)
  required: @Initialized @NonNull String
../nullgtn/url633772aa30_isma3l_Tp2_tgz-pJ8-ar_fiuba_tecnicas_framework_Pruebas_Casos1_MainJ8/src/ar/fiuba/tecnicas/framework/JTest/TestSuite.java:113: error: [override.param] Incompatible parameter type for testReport.
    public void run(TestReport testReport) throws Throwable {
                               ^
  found   : @Initialized @NonNull TestReport
  required: @Initialized @Nullable TestReport
  Consequence: method in @Initialized @NonNull TestSuite
    @NonNull void run(@Initialized @NonNull TestSuite this, @Initialized @NonNull TestReport p0) throws @Initialized @NonNull Throwable
  cannot override method in @Initialized @NonNull Test
    @NonNull void run(@Initialized @NonNull Test this, @Initialized @Nullable TestReport p0) throws @Initialized @NonNull Throwable
../nullgtn/url633772aa30_isma3l_Tp2_tgz-pJ8-ar_fiuba_tecnicas_framework_Pruebas_Casos1_MainJ8/src/ar/fiuba/tecnicas/framework/JTest/TestSuite.java:126: error: [argument] incompatible argument for parameter exception of TestSuite.tearingDown.
                tearingDown(exception);
                            ^
  found   : @Initialized @Nullable Throwable
  required: @Initialized @NonNull Throwable
../nullgtn/url633772aa30_isma3l_Tp2_tgz-pJ8-ar_fiuba_tecnicas_framework_Pruebas_Casos1_MainJ8/src/ar/fiuba/tecnicas/framework/JTest/TestRunner.java:29: error: [initialization.static.field.uninitialized] static field testCreator not initialized
    private static TestCreator testCreator;
                               ^
../nullgtn/url633772aa30_isma3l_Tp2_tgz-pJ8-ar_fiuba_tecnicas_framework_Pruebas_Casos1_MainJ8/src/ar/fiuba/tecnicas/framework/JTest/ResultPrinter.java:52: error: [override.param] Incompatible parameter type for messsage.
    public void print(String messsage) {
                             ^
  found   : @Initialized @NonNull String
  required: @Initialized @Nullable String
  Consequence: method in @Initialized @NonNull ResultPrinter
    @NonNull void print(@Initialized @NonNull ResultPrinter this, @Initialized @NonNull String p0)
  cannot override method in @Initialized @NonNull TestListener
    @NonNull void print(@Initialized @NonNull TestListener this, @Initialized @Nullable String p0)
../nullgtn/url633772aa30_isma3l_Tp2_tgz-pJ8-ar_fiuba_tecnicas_framework_Pruebas_Casos1_MainJ8/src/ar/fiuba/tecnicas/framework/JTest/XmlPrinter.java:21: error: [initialization.fields.uninitialized] the constructor does not initialize fields: nameCase, time, throwable, fileWriter, printer
    public XmlPrinter() {
           ^
../nullgtn/url633772aa30_isma3l_Tp2_tgz-pJ8-ar_fiuba_tecnicas_framework_Pruebas_Casos1_MainJ8/src/ar/fiuba/tecnicas/framework/JTest/XmlPrinter.java:23: error: [method.invocation] call to inicializar() not allowed on the given receiver.
        inicializar();
                   ^
  found   : @UnderInitialization @NonNull XmlPrinter
  required: @Initialized @NonNull XmlPrinter
../nullgtn/url633772aa30_isma3l_Tp2_tgz-pJ8-ar_fiuba_tecnicas_framework_Pruebas_Casos1_MainJ8/src/ar/fiuba/tecnicas/framework/JTest/XmlPrinter.java:79: error: [override.param] Incompatible parameter type for messsage.
    public void print(String messsage) {
                             ^
  found   : @Initialized @NonNull String
  required: @Initialized @Nullable String
  Consequence: method in @Initialized @NonNull XmlPrinter
    @NonNull void print(@Initialized @NonNull XmlPrinter this, @Initialized @NonNull String p0)
  cannot override method in @Initialized @NonNull TestListener
    @NonNull void print(@Initialized @NonNull TestListener this, @Initialized @Nullable String p0)
21 errors
